Feedback Extensions and tests